--- a/styles.css
+++ b/styles.css
@@ -21,19 +21,20 @@ h1, h2, h3, h4 {
 h1 {
   font-size: 4rem;
   line-height: 6rem;
+  margin-bottom: 10px;
 }
 
 h2 {
   font-size: 3rem;
   line-height: 3.2rem;
-  padding: 10px 0px;
+  margin-bottom: 10px
 
 }
 
 h3 {
   font-size: 2rem;
   line-height: 2.7rem;
-  padding-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 h4 {
